--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="padding_regular">10dp</dimen>
     <dimen name="line_spacing">5sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="layout_marginStart">8dp</dimen>
 </resources>
